<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp"
    tools:context="sv.ues.fia.serviciosocialfia.ModificarExpedienteActivity">
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editTxtInsertCarrAlumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:hint="@string/BlCrearCodCarrera"
                android:text="@string/BlCrearCodCarrera" />

            <EditText
                android:id="@+id/editTxtInsertCarnetAlumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/BlActualizarCarnet" />

            <Button
                android:id="@+id/btnRecAlumn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="insertarAlumno"
                android:text="@string/BlBtnRecuperar" />

            <EditText
                android:id="@+id/editTxtInsertNomAlumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/BlCrearNombreAlumno"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTxtInsertApeAlumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/BlCrearApellidoAlumno"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTxtInsertTelInAlumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/BlCrearTelefonoAlumno"
                android:inputType="phone" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editTxtInsertEmailAlumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/BlCrearEmailAlumno"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTxtInsertFechaInAlumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/BlCrearFechaInicioAlumno"
                android:inputType="date" />

            <EditText
                android:id="@+id/editTxtInsertFechaFinAlumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/BlCrearFechaFinAlumno"
                android:inputType="date" />

            <EditText
                android:id="@+id/editTextCodEmp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/BlCrearCarnetEmpleado" />

            <EditText
                android:id="@+id/editTextSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/BlGenero" />

            <EditText
                android:id="@+id/editTextEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/BlEstadoExpediente" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            </RadioGroup>

            <EditText
                android:id="@+id/editTxtInsertObsAlumno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:ems="10"
                android:hint="@string/BlCrearObservacionesAlumno"
                android:inputType="textAutoCorrect|textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnActAlumn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/BlBtnActualizar" />

                <Button
                    android:id="@+id/btnBorrarAlumn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BlBtnLimpiar" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
